# rendering_window_manager

./: .gitmodules  CMakeLists.txt  button_handler.cpp  button_handler.h  main.cpp
display_manager/: layout_manager.cpp  layout_manager.h  win32_window.cpp  win32_window.h  win32_window_creator.cpp  win32_window_creator.h  window.h
external_lib/: CMakeLists.txt
external_lib/utility/: CMakeLists.txt  function_duration_observer.cpp  function_duration_observer.h
external_lib/utility/executor/: executor.cpp  executor.cpp.bak  executor.h
unit_test/: CMakeLists.txt  main.cpp
unit_test/catch/: catch.hpp
